[package]
name = "evalica"
version = "0.4.0-rc.1"
edition = "2021"
description = "Evalica, your favourite evaluation toolkit."
repository = "https://github.com/dustalov/evalica"
license = "Apache-2.0"
exclude = ["*.csv", "*.ipynb", "*.svg", ".github", ".gitignore", "coling2025", "docs", "examples", "scripts"]

[lib]
name = "evalica"
crate-type = ["cdylib"]

[dependencies]
ndarray = "^0.17.2"
num-traits = "^0.2.19"
pyo3 = { version = "^0.28.0", features = ["abi3-py38"], optional = true }
numpy = { version = "^0.28.0", optional = true }
wasm-bindgen = { version = "^0.2.108", optional = true }

[features]
blas = ["ndarray/blas"]
python = ["dep:pyo3", "dep:numpy"]
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
approx = "^0.5.1"
wasm-bindgen-test = "^0.3.58"
