[package]
name = "evalica"
version = "0.4.0"
edition = "2021"
description = "Evalica, your favourite evaluation toolkit."
repository = "https://github.com/dustalov/evalica"
license = "Apache-2.0"
keywords = ["ranking", "evaluation", "bradley-terry", "elo", "leaderboard"]
categories = ["algorithms", "mathematics", "science"]
exclude = ["*.csv", "*.ipynb", "*.svg", ".github", ".gitignore", "coling2025", "docs", "examples", "scripts"]

[lib]
name = "evalica"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "^0.17.2", default-features = false }
num-traits = "^0.2.19"
rand = "^0.10.0"
pyo3 = { version = "^0.28.0", features = ["abi3-py38"], optional = true }
numpy = { version = "^0.28.0", optional = true }
wasm-bindgen = { version = "^0.2.108", optional = true }
blas-src = { version = "^0.10.0", default-features = false, optional = true }
openblas-src = { version = "^0.10.14", default-features = false, features = ["cblas", "system"], optional = true }
netlib-src = { version = "^0.8.0", default-features = false, features = ["cblas", "system"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = { version = "^0.3.2", optional = true }

[features]
blas = ["ndarray/blas"]
blas-src = ["blas", "dep:blas-src"]
accelerate-src = ["blas-src", "dep:accelerate-src"]
openblas-src = ["blas-src", "dep:openblas-src"]
netlib-src = ["blas-src", "dep:netlib-src"]
python = ["dep:pyo3", "dep:numpy"]
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
approx = "^0.5.1"
wasm-bindgen-test = "^0.3.58"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
too_many_arguments = "allow"
type_complexity = "allow"
unreadable_literal = "allow"
explicit_iter_loop = "allow"
cast_precision_loss = "allow"
multiple_crate_versions = "allow"
