[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "evalica"
license = "Apache-2.0"
description = "Evalica, your favourite evaluation toolkit."
keywords = [
    "Bradley-Terry",
    "Elo",
    "PageRank",
    "eigenvector",
    "evaluation",
    "leaderboard",
    "pairwise comparisons",
    "ranking",
    "rating",
    "statistics",
]
requires-python = "~= 3.8"
dependencies = ["numpy>=1.16.0", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "abi3audit",
    "hypothesis[numpy]",
    "mypy",
    "nbqa",
    "notebook",
    "pandas-stubs",
    "plotly",
    "pytest",
    "pytest-codspeed",
    "pytest-cov",
    "ruff",
    "twine",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python"
]
gradio = [
    "gradio",
    "plotly",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
evalica = "evalica.__main__:main"

[project.urls]
Homepage = "https://github.com/dustalov/evalica"
Changelog = "https://github.com/dustalov/evalica/releases"
Issues = "https://github.com/dustalov/evalica/issues"
Documentation = "https://evalica.readthedocs.io/"
Download = "https://pypi.org/project/evalica/#files"
Repository = "https://github.com/dustalov/evalica"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.maturin]
features = ["python"]
python-source = "python"

[tool.mypy]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]
strict = true

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "D406",    # new-line-after-section-name
    "D407",    # dashed-underline-after-section
    "ERA001",  # commented-out-code
    "FIX002",  # line-contains-todo
    "PLR0913", # too-many-arguments
    "PYI021",  # docstring-in-stub
    "S101",    # assert
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
]

[tool.ruff.lint.per-file-ignores]
"!__init__.py" = [
    "D", # pydocstyle
]
"*.ipynb" = [
    "B018",   # useless-expression
    "RUF001", # ambiguous-unicode-character-string
]
